# token-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_achievements.py  test_cli.py  test_pricing.py  test_report.py  test_scanner.py  test_wrapped.py
tests/fixtures/empty-project/: session-empty.jsonl
tests/fixtures/project-alpha/: session-001.jsonl  session-002.jsonl
tests/fixtures/project-beta/: session-003.jsonl  session-004.jsonl
token_audit/: achievements.py  cli.py  models.py  prices.toml  pricing.py  report.py  scanner.py  wrapped.py
