[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "token-audit"
version = "0.1.0"
description = "Report Claude Code token usage from local session transcripts"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nrohozen" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = []

[project.scripts]
token-audit = "token_audit.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["token_audit*"]

[tool.setuptools.package-data]
token_audit = ["prices.toml"]
